--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
